Navigation: style the navigation__nav - set it to cover the entire screen - fixed its position to the top/right - set the z-index so that it is between the navigation__button(topmost) and the page - also hid the navigation__checkbox

--- a/css/style.css
+++ b/css/style.css
@@ -557,6 +557,9 @@ body {
     transform: translate(-50%, -50%);
     text-align: center; }
 
+.navigation__checkbox {
+  display: none; }
+
 .navigation__button {
   background-color: #fff;
   height: 7rem;
@@ -565,7 +568,7 @@ body {
   position: fixed;
   top: 6rem;
   right: 6rem;
-  z-index: 101; }
+  z-index: 200; }
 
 .navigation__background {
   height: 6rem;
@@ -576,6 +579,14 @@ body {
   right: 6.5rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 100; }
+
+.navigation__nav {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 150; }
 
 .section-about {
   background-color: #f7f7f7;
