--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,5 +1,6 @@
 .navigation {
   &__checkbox {
+    display: none;
   }
 
   &__button {
@@ -10,7 +11,7 @@
     position: fixed;
     top: 6rem;
     right: 6rem;
-    z-index: 101;
+    z-index: 200;
   }
 
   &__background {
@@ -25,6 +26,12 @@
   }
 
   &__nav {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 150;
   }
 
   &__list {
